--- a/app/templates/home/add_training.html
+++ b/app/templates/home/add_training.html
@@ -108,7 +108,7 @@
       </div>
       <div class="container_team_cards_big">
           {% for team in teams %}
-          <div class="teamCard_big2" teamid={{team.id_teams}} style="height: 50%;">
+          <div class="teamCard_big2" teamid={{team.id_teams}} style="height: 70%;">
               <h2>{{team.name}}</h2>
           </div>
           {% endfor %}
@@ -128,12 +128,17 @@
           <input type="search" placeholder="chercher" id="search" data-search-big>
       </div>
       <div class="container_student_cards">
-          {% for eleve in eleves %}
-          <div class="studentCard" studentid={{eleve.id_users}}>
-              <h2>{{eleve.first_name}}</h2>
-              <h2 style="margin-left: 1%;">{{eleve.last_name}}</h2>
-          </div>
-          {% endfor %}
+           {% set seen_names = {} %}
+            {% for eleve in eleves %}
+                {% set full_name = eleve.first_name ~ ' ' ~ eleve.last_name %}
+                {% if full_name not in seen_names %}
+                    <div class="studentCard" teamid={{eleve.id_teams}}>
+                        <h2>{{eleve.first_name}}</h2>
+                        <h2 style="margin-left: 1%">{{eleve.last_name}}</h2>
+                    </div>
+                    {% set _ = seen_names.update({full_name: true}) %}
+                {% endif %}
+            {% endfor %}
       </div>
    
       
