--- a/app/templates/home/add_training.html
+++ b/app/templates/home/add_training.html
@@ -1,7 +1,7 @@
 {% extends 'base_prof.html' %}
 
 {% block content %}
-
+<script defer type="text/javascript" src="{{url_for('static', filename='js/search_student-training.js')}}"></script>
 <div class="container_add">
     <h1 style="color: #ffe9a2 ;margin-left: 2%;font-size:230%;margin-top: 3%;">Création d'un entrainement:</h1>
 
@@ -104,7 +104,7 @@
       <h1 style="color: #fdfdfd;margin-left: 5%;font-size:230%;margin-top: 3%; margin-bottom:2% ;">Choisissez un ou plusieurs <span style="color: #d4ddfc;">élèves</span>:</h1>
       
       <div class="search-input_big">
-          <input type="search" placeholder="chercher" id="search" data-search-big>
+          <input type="search" placeholder="chercher" id="search-team" data-search-big>
       </div>
       <div class="container_team_cards_big">
           {% for team in teams %}
@@ -125,7 +125,7 @@
       <h1 style="color: #fdfdfd;margin-left: 5%;font-size:230%;margin-top: 3%; margin-bottom:2% ;">Choisissez une ou plusieurs <span style="color: #d4ddfc;">équipes</span>:</h1>
       
       <div class="search-input_big">
-          <input type="search" placeholder="chercher" id="search" data-search-big>
+          <input type="search" placeholder="chercher" id="search-student" data-search-big>
       </div>
       <div class="container_student_cards">
            {% set seen_names = {} %}
