--- a/app/templates/base_prof.html
+++ b/app/templates/base_prof.html
@@ -42,7 +42,7 @@
                 </div>
                 
                 </div>
-                <img src="{{ url_for('static', filename='img/logo.png') }}" style="width: 100%;" >
+                <img src="{{ url_for('static', filename='img/logo.png') }}" style="width: 80%;margin-left: 10%;margin-top: 20%;" >
 
             </div>
         </div>
