--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -477,5 +477,29 @@ ul,li{
     background-color: #FDFDFD;
 }
 
+.completed {
+    text-decoration: line-through;
+    opacity: 0.7; 
+  }
 
+.change-page-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fdd6e2;
+    font-size: 12px;
+    border-radius: 15px;
+    border: none;
+    outline: none;
+    width: 20%;
+    height: 80%;
+    font-size: 100%;
+    color: #fdfdfd;
+    cursor: pointer;
+    margin-right: 2%;
+    
+}
 
+.hide{
+    display: none;
+}
