--- a/app/templates/home/add_team.html
+++ b/app/templates/home/add_team.html
@@ -4,7 +4,7 @@
 <script defer type="text/javascript" src="{{url_for('static', filename='js/create_and_update_teams.js')}}"></script>
 
 <div class="container_add">
-    <h1 style="color: #fdfdfd;margin-left: 5%;font-size:230%;margin-top: 3%;">Equipes:</h1>
+    <h1 style="color: #fee6b0;margin-left: 5%;font-size:230%;margin-top: 3%;">Equipes:</h1>
     <h1 style="color: #fdfdfd;margin-left: 5%;font-size:230%;margin-top: 3%; margin-bottom:2% ;">Taper le nom d'une <span style="color: #d4ddfc;">équipe</span> pour pouvoir la modifier:</h1>
 
 
