--- a/app/templates/home/add_training.html
+++ b/app/templates/home/add_training.html
@@ -101,12 +101,12 @@
 
 <div class="container_prof hide" id="selection-team">
   <div class="find_equipe_big">
-      <h1 style="color: #fdfdfd;margin-left: 5%;font-size:230%;margin-top: 3%; margin-bottom:2% ;">Choisissez un ou plusieurs <span style="color: #d4ddfc;">élèves</span>:</h1>
+      <h1 style="color: #fdfdfd;margin-left: 5%;font-size:230%;margin-top: 3%; margin-bottom:2% ;">Choisissez une ou plusieures <span style="color: #d4ddfc;">équipes</span>:</h1>
       
       <div class="search-input_big">
           <input type="search" placeholder="chercher" id="search-team" data-search-big>
       </div>
-      <div class="container_team_cards_big">
+      <div class="container_team_cards_big" style="margin-top: 2%;">
           {% for team in teams %}
           <div class="teamCard_big2" teamid={{team.id_teams}} style="height: 70%;">
               <h2>{{team.name}}</h2>
@@ -122,12 +122,12 @@
 
 <div class="container_prof hide" id="selection-eleve">
   <div class="find_equipe_big">
-      <h1 style="color: #fdfdfd;margin-left: 5%;font-size:230%;margin-top: 3%; margin-bottom:2% ;">Choisissez une ou plusieurs <span style="color: #d4ddfc;">équipes</span>:</h1>
+      <h1 style="color: #fdfdfd;margin-left: 5%;font-size:230%;margin-top: 3%; margin-bottom:2% ;">Choisissez un ou plusieurs <span style="color: #d4ddfc;">élèves</span>:</h1>
       
       <div class="search-input_big">
           <input type="search" placeholder="chercher" id="search-student" data-search-big>
       </div>
-      <div class="container_student_cards">
+      <div class="container_student_cards" style="margin-top: 2%;">
            {% set seen_names = {} %}
             {% for eleve in eleves %}
                 {% set full_name = eleve.first_name ~ ' ' ~ eleve.last_name %}
@@ -152,13 +152,13 @@
 
 <div class="under_portion">
     <div class="change-page-button" id="send-selection-team-page">
-        <h1 style="font-size: medium;"> envoyer à une équipe</h1>
+        <h1 style="font-size: medium;"> envoyer à une équipe </h1>
     </div>
     <div class="change-page-button" id="send-selection-eleve-page">
-        <h1 style="font-size: medium;"> envoyer à des élèves</h1>
+        <h1 style="font-size: medium;"> envoyer à un élève </h1>
     </div>
     <div class="change-page-button" id="send-creation-entrainement-page">
-        <h1 style="font-size: medium;"> creation entrainement</h1>
+        <h1 style="font-size: medium;"> création entrainement</h1>
     </div>
     <div class="validation-button" id="send-to-database">
         <h1 style="font-size: medium;"> valider</h1>
