--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -92,4 +92,5 @@
 </div>
 
 <script defer type="text/javascript" src="{{url_for('static', filename='js/happiness.js')}}"></script>
+<script defer type="text/javascript" src="{{url_for('static', filename='js/index_todo.js')}}"></script>
 {% endblock %}
