--- a/app/templates/home/index_prof.html
+++ b/app/templates/home/index_prof.html
@@ -8,13 +8,14 @@
     <div class="find_equipe">
         <div class="high_part">
             <div><h1 style="color: #fdfdfd;margin-left: 7%;font-size:230%;">Equipes:</h1></div>
-        </div>            <div><a href="{{url_for('home.add_team')}}" style="text-decoration: none;" ><h1 style="color: #fdfdfd;font-size:400%;margin-top: 10px;">+</h1></a></div>
+            <div><a href="{{url_for('home.add_team')}}" style="text-decoration: none;" ><h1 style="color: #fcdfe1;font-size:400%;margin-top: 10px;">+</h1></a></div>
+        </div>           
 
-        <div class="search-input">
+        <div class="search-input" style="margin-left: 17%;">
             <input type="search" placeholder="chercher" id="search" data-search>
 
         </div>
-        <div class="container_team_cards">
+        <div class="container_team_cards" style="margin-left: 15%;">
             {% for team in teams %}
             <div class="teamCard" teamid={{team.id_teams}}>
                 <h2>{{team.name}}</h2>
